[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/title-font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Languages.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Title.gd" type="Script" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Scenes/UI/Settings.tscn" type="PackedScene" id=5]

[node name="TitleScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 896.0
margin_bottom = 234.0
size_flags_vertical = 3

[node name="Title" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 255.0
margin_top = 74.0
margin_right = 640.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 1 )
text = "OpenSuspect"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 238.0
margin_right = 896.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 64
custom_constants/margin_left = 64

[node name="MainMenu" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 64.0
margin_right = 832.0
margin_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 64
custom_constants/margin_left = 64
script = ExtResource( 4 )

[node name="MenuItems" type="VBoxContainer" parent="VBoxContainer/MarginContainer/MainMenu"]
margin_left = 64.0
margin_right = 704.0
margin_bottom = 234.0
size_flags_vertical = 3
custom_constants/separation = 16

[node name="NewGame" type="Button" parent="VBoxContainer/MarginContainer/MainMenu/MenuItems"]
margin_right = 640.0
margin_bottom = 20.0
text = "NEW_GAME"
flat = true

[node name="Appearence" type="Button" parent="VBoxContainer/MarginContainer/MainMenu/MenuItems"]
margin_top = 36.0
margin_right = 640.0
margin_bottom = 56.0
text = "EDIT_APPEARENCE"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="VBoxContainer/MarginContainer/MainMenu/MenuItems"]
margin_top = 72.0
margin_right = 640.0
margin_bottom = 92.0
text = "SETTINGS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Language" type="Button" parent="VBoxContainer/MarginContainer/MainMenu/MenuItems"]
margin_top = 108.0
margin_right = 640.0
margin_bottom = 128.0
text = "LANGUAGE"
flat = true

[node name="AppearenceEditor" type="HBoxContainer" parent="VBoxContainer/MarginContainer/MainMenu"]
visible = false
margin_left = 64.0
margin_right = 704.0
margin_bottom = 234.0

[node name="LanguageSelector" type="ScrollContainer" parent="VBoxContainer/MarginContainer/MainMenu"]
visible = false
margin_left = 64.0
margin_right = 704.0
margin_bottom = 234.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LanguageList" type="VBoxContainer" parent="VBoxContainer/MarginContainer/MainMenu/LanguageSelector"]
margin_right = 640.0
margin_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/MainMenu/LanguageSelector/LanguageList"]
margin_right = 640.0
margin_bottom = 20.0
text = "Test button"

[node name="Settings" parent="VBoxContainer/MarginContainer/MainMenu" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_right = 704.0
margin_bottom = 234.0
[connection signal="pressed" from="VBoxContainer/MarginContainer/MainMenu/MenuItems/NewGame" to="VBoxContainer/MarginContainer/MainMenu" method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/MainMenu/MenuItems/Settings" to="VBoxContainer/MarginContainer/MainMenu" method="_on_Settings_pressed"]
